removed string literals duplications